# rusty-reindeer

./: .gitignore  .tokeiignore  Cargo.toml  Justfile  LICENSE  README.md  convex.json  package-lock.json  package.json
convex/: observer.ts  santa.ts  schema.ts  speed.ts  workers.ts
convex/_generated/: api.d.ts
pages/: _app.tsx  index.tsx
rust-src/: main.rs
src/: globals.css  main.rs
util/: supervise.py
