[package]
name = "rusty-reindeer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusty-reindeer"
path = "rust-src/main.rs"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
convex = "0.1.1"
futures = "0.3"
tokio = { features = [ "full" ], version = "1" }
maplit = "1"
rand = { features = [ "std_rng" ], version = "0.8" }
clap = { version = "4", features = ["derive"] }